@@ -1,0 +1,10 @@
+/*
+ *	$Id $
+ */
+
+#ifndef  __EXSB_COMMON_H__
+#define  __EXSB_COMMON_H__
+
+unsigned long exsb_get_pixel( Display * display , int screen , char * color_name) ;
+
+#endif
